--- a/package.json
+++ b/package.json
@@ -4,5 +4,20 @@
   "main": "./index.js",
   "dependencies": {
     "axios": "^0.19.0"
-  }
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tswjs/open-platform-plugin.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/tswjs/open-platform-plugin/issues"
+  },
+  "homepage": "https://github.com/tswjs/open-platform-plugin#readme",
+  "description": ""
 }
