--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "main": "./index.js",
   "dependencies": {
+    "moment": "^2.24.0",
     "axios": "^0.19.0"
   },
   "devDependencies": {},
