--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@tswjs/open-platform-plugin",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "main": "./index.js",
   "dependencies": {
-    "moment": "^2.24.0",
-    "axios": "^0.19.0"
+    "axios": "^0.19.0",
+    "ip": "^1.1.5",
+    "moment": "^2.24.0"
   },
   "devDependencies": {},
   "scripts": {
