--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@tswjs/open-platform-plugin",
-  "version": "0.0.9",
+  "version": "1.0.0",
   "main": "./index.js",
   "dependencies": {
-    "axios": "^0.19.0",
+    "@tswjs/open-platform-api": "^1.0.0",
     "ip": "^1.1.5",
     "moment": "^2.24.0"
   },
